--- a/smscskkings.html
+++ b/smscskkings.html
@@ -73,12 +73,12 @@
 
     <h2>Goblin shark - Mitsukurina owstoni</h2>
     <p>
-        The fourth creature on the list is the unusual goblin shark. The goblin shark is an elusive, slow moving, deep living shark. Fun fact: it lives up to 1,800 feet below sea level! It preys mostly on small fish, squid, shrimps, and other soft-bodied creatures. It has small eyes and pinkish, whitish skin. It has a maximum length of 14 feet long. It has dagger-like front teeth. (Because this shark lives so deep down, and it moves so slow, it is not a threat to humans.) It lives in the west Atlantic, near South Africa, the western Indian Ocean, and near Japan and Australia. The goblin shark is a strange creature.
+        The <a id="button5" class="button-like">fourth</a>  creature on the list is the unusual goblin shark. The goblin shark is an elusive, slow moving, deep living shark. Fun fact: it lives up to 1,800 feet below sea level! It preys mostly on small fish, squid, shrimps, and other soft-bodied creatures. It has small eyes and pinkish, whitish skin. It has a maximum length of 14 feet long. It has dagger-like front teeth. (Because this shark lives so deep down, and it moves so slow, it is not a threat to humans.) It lives in the west Atlantic, near South Africa, the western Indian Ocean, and near Japan and Australia. The goblin shark is a strange creature.
     </p>
 
     <h2>Glass frog - Centrolenidae</h2>
     <p>
-        The fifth creature on this list is the bizarre glass frog. The strangest thing about these creatures is that they are see-through! They are classified in approximately 160 species and 12 genera. They are found in tropical forests to mid-elevation mountain forests. Most species are small, with adults ranging from 20 to 30 millimeters (0.8 to 1.2 inches) in total length. Some species, however, reach a maximum length of 80mm, or 3 inches. The glass frog is a strange creature.
+        The <a id="button6" class="button-like">fifth</a> creature on this list is the bizarre glass frog. The strangest thing about these creatures is that they are see-through! They are classified in approximately 160 species and 12 genera. They are found in tropical forests to mid-elevation mountain forests. Most species are small, with adults ranging from 20 to 30 millimeters (0.8 to 1.2 inches) in total length. Some species, however, reach a maximum length of 80mm, or 3 inches. The glass frog is a strange creature.
     </p>
 
     <h2>Pink fairy armadillo - Chlamyphorus truncatus</h2>
