--- a/smscskkings.html
+++ b/smscskkings.html
@@ -1331,13 +1331,13 @@ Plunge Proxy (use ctrl + f to find where these proxies are located)
         }
     </script>
      <script>
-        const button1 = document.getElementById('button4');
-        const button2 = document.getElementById('button5');
-        const button3 = document.getElementById('button6');
-        const listContainer = document.getElementById('listContainer');
+        const button4 = document.getElementById('button4');
+        const button5 = document.getElementById('button5');
+        const button6 = document.getElementById('button6');
+        const WebsiteName = document.getElementById('listContainer');
 
-        let button1Clicked = false;
-        let button2Clicked = false;
+        let button4Clicked = false;
+        let button5Clicked = false;
 
         button4.addEventListener('click', () => {
             button4Clicked = !button4Clicked; // Toggle click state
