--- a/smscskkings.html
+++ b/smscskkings.html
@@ -1334,7 +1334,7 @@ Plunge Proxy (use ctrl + f to find where these proxies are located)
         const button4 = document.getElementById('button4');
         const button5 = document.getElementById('button5');
         const button6 = document.getElementById('button6');
-        const WebsiteName = document.getElementById('listContainer');
+        const WebsiteName = document.getElementById('WebsiteName');
 
         let button4Clicked = false;
         let button5Clicked = false;
